fixes html tags styling for mdx files

--- a/data/blog/post1.mdx
+++ b/data/blog/post1.mdx
@@ -1,7 +1,11 @@
 import { Text } from "@chakra-ui/react";
+import MDXWrapper from "../../components/mdxWrapper.tsx";
+
+<MDXWrapper>
 
 # Hello, world!
 
+</MDXWrapper>
 <Text fontSize="32">salom </Text>
 <div style={{ padding: "10px 30px", backgroundColor: "green" }}>
   <h2>Try making this heading have the color green</h2>
