adds simple layout for blog to stop my eyes from bleeding

--- a/data/blog/post2.mdx
+++ b/data/blog/post2.mdx
@@ -4,6 +4,7 @@ post #2
 
 ## helps
 
+Labore clita no aliquyam eirmod labore est dolor, ipsum vero diam takimata sed sadipscing sed sed sea, accusam ea dolore clita et nonumy sed. Justo vero sed lorem magna sed. Elitr nonumy nonumy eirmod sea amet et sed. Ea labore sea clita lorem sit invidunt justo. Dolor et sed sanctus eirmod, stet amet lorem consetetur no ipsum amet voluptua et. Gubergren sea dolores sanctus elitr et, clita accusam erat duo lorem et justo sed dolor at. Amet accusam consetetur lorem no clita gubergren et est eirmod. Accusam gubergren ipsum tempor consetetur vero. Duo rebum et diam et. Ea diam sanctus sed sea consetetur clita duo invidunt. Rebum eos justo tempor erat sed voluptua, et ut labore at erat vero dolore. Kasd sea kasd sadipscing sed sed et et duo at. Amet consetetur diam elitr diam magna dolore lorem ut. Labore ea kasd sed lorem ut takimata labore, erat erat dolor sed accusam takimata et diam diam. Takimata gubergren sea eirmod ea dolor, est sed et eirmod clita dolor eos dolores dolores. Et eirmod sed labore sanctus et. Clita aliquyam sit nonumy sit tempor. Lorem ipsum erat consetetur accusam sanctus, et sit ea lorem lorem vero vero amet sadipscing. Tempor dolor est voluptua tempor, magna et nonumy et sit nonumy dolor eos dolore et. Sanctus et ipsum ipsum kasd gubergren elitr, amet ea ut lorem sit eos labore, dolores clita voluptua diam clita kasd sanctus et at duo, est aliquyam lorem dolor tempor rebum dolore. Vero voluptua invidunt lorem sanctus sanctus amet magna. Lorem magna vero duo dolor consetetur dolor consetetur justo clita. Elitr gubergren magna justo gubergren, et diam accusam ea sed eos aliquyam amet diam tempor. Justo sed et dolor sanctus clita, ipsum et stet amet takimata sit eirmod. Et stet lorem diam et consetetur et et, at dolor duo et voluptua at, amet sit diam sed aliquyam ut, ut amet ipsum kasd invidunt erat sit aliquyam diam eirmod. Et sed sed sed sit rebum dolores. Est aliquyam amet ea dolor justo. Diam elitr dolor diam erat ipsum sanctus sea erat dolor. Sed sit ut sanctus sed accusam ipsum sit. Invidunt ipsum et ipsum invidunt eirmod eirmod. Dolores takimata gubergren nonumy sed tempor diam nonumy takimata sea, eos sed at at diam eirmod tempor, kasd lorem magna erat at et voluptua diam est amet. Sit sanctus labore diam et ea. Dolor est et diam gubergren duo. Sed dolores ea rebum vero tempor lorem lorem diam diam. Sit et lorem ipsum est dolore sanctus voluptua dolor. Sea ipsum magna diam ipsum eos dolor vero dolore. Tempor dolor ipsum magna rebum at, est ea ea dolor amet ipsum, dolor lorem magna lorem magna sed, takimata elitr elitr ipsum lorem stet sit no ut, et amet amet et takimata dolor at et. Et eos at accusam justo amet sanctus labore. Accusam nonumy diam voluptua invidunt sanctus dolor et, rebum sed et justo diam, no lorem dolores eirmod consetetur ipsum accusam no takimata. Dolor sanctus amet eirmod eirmod sed consetetur clita justo, labore kasd eirmod dolores aliquyam dolor est sea, ipsum magna labore clita et tempor nonumy diam sed. Elitr takimata at lorem sed clita accusam sed kasd. Consetetur ipsum et vero labore voluptua sed et diam sit. Accusam invidunt voluptua et tempor sed, kasd invidunt amet vero dolores et. Sit ipsum lorem clita ea dolores kasd diam nonumy et, amet stet accusam kasd dolores sit gubergren, erat magna sit nonumy no. Vero dolor at rebum sea invidunt et dolore takimata, tempor sea dolor duo vero sed, et kasd lorem labore kasd est ea dolores kasd accusam. Sanctus erat kasd accusam at dolor sanctus sea accusam, sanctus aliquyam amet voluptua labore ea ipsum. Justo sit lorem gubergren clita magna amet magna dolor consetetur. Lorem ut elitr sed magna dolor. Et lorem labore labore elitr sit lorem elitr. Accusam duo sea labore ea vero. Diam erat dolore sed takimata et amet takimata nonumy, et amet sanctus elitr sadipscing labore, ipsum vero clita accusam gubergren, invidunt sadipscing sea nonumy sit vero lorem accusam vero magna, nonumy diam no ut sea ut dolor et. Amet est consetetur kasd consetetur est sed, magna rebum stet amet diam consetetur diam. Sadipscing et justo dolor elitr sed, consetetur justo lorem justo et no eirmod lorem et vero, accusam dolore erat justo invidunt consetetur sit, et sea diam sed ea stet et. Sadipscing amet lorem et sit. At diam ea lorem accusam aliquyam et, no amet sed accusam erat nonumy. Sit invidunt gubergren eos magna nonumy, diam sed kasd et kasd et erat. Takimata ut et justo sanctus stet lorem, eirmod sanctus et accusam kasd ipsum, et et erat amet invidunt, voluptua sed dolore ea dolor, aliquyam tempor elitr est at diam dolore dolor, duo et dolor diam diam voluptua sed. Ut dolor diam invidunt dolor amet sit ipsum ipsum, eirmod consetetur et lorem no. Sed aliquyam sed justo elitr consetetur dolore nonumy. Duo et diam dolore dolores lorem rebum sanctus et ea. No est ipsum invidunt tempor nonumy sea amet sit, est ipsum nonumy diam gubergren sadipscing lorem sea est at. Tempor tempor duo lorem sanctus kasd at erat ipsum. Lorem labore invidunt et rebum. Takimata no est sed duo lorem, sed no no dolor no labore aliquyam et ipsum nonumy, sadipscing labore elitr dolor sea dolor sadipscing diam, dolore est duo et duo, ut duo amet stet sit voluptua vero tempor amet. Dolore sanctus dolor sea ut consetetur. Clita eos vero sit kasd accusam. Invidunt accusam invidunt sed ea sed. Eirmod kasd at dolor dolor lorem dolor dolores nonumy dolor, amet labore lorem sed magna. Dolores ipsum gubergren kasd et labore sed sed, erat et at aliquyam consetetur et duo, magna nonumy erat dolor nonumy est diam. Kasd consetetur consetetur duo ipsum nonumy aliquyam. Kasd et lorem et sit ipsum lorem, eirmod sanctus voluptua ea est kasd justo erat voluptua, justo voluptua sed erat clita, rebum amet dolore takimata elitr justo gubergren aliquyam amet. Elitr tempor labore ut dolor. Et clita et invidunt et sanctus amet ut accusam,.
 why is the
 _style_
 
