update /blog path to display all blog posts and brief info

--- a/data/blog/post1.mdx
+++ b/data/blog/post1.mdx
@@ -1,12 +1,7 @@
-import { Text } from "@chakra-ui/react";
-import MDXWrapper from "../../components/mdxWrapper.tsx";
-
 ---
-
-title: 'Hello world'
-publishedAt: '2017-07-15'
-summary: 'Visualize my journey through the scenic lands of Norway with rich, stunning pictures and daily travel logs.'
-
+title: "Hello world"
+published_at: "2017-07-15"
+summary: "Visualize my journey through the scenic lands of Norway with rich, stunning pictures and daily travel logs."
 ---
 
 # Hello, world!
