--- a/data/blog/post2.mdx
+++ b/data/blog/post2.mdx
@@ -1,5 +1,16 @@
+---
+title: "10 Days in Norway"
+published_at: "2017-07-15"
+summary: "Sit sit aliquyam sed labore dolor diam ut tempor consetetur. Sit eirmod gubergren ut invidunt ipsum dolore et sanctus, aliquyam."
+image: "/static/images/10-days-in-norway/banner.png"
+---
+
 post #2
 
+<Image
+  src="https://images.unsplash.com/photo-1618911392103-cab935ce0a0b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzR8fHNoaWJhJTIwaW51fGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60"
+  alt="blah text"
+/>
 # post 2 and that is it for today
 
 ## helps
