makes blog post layout prettier, updates heading sizes in default theme

--- a/data/blog/post1.mdx
+++ b/data/blog/post1.mdx
@@ -1,10 +1,14 @@
 ---
 title: "Hello world"
+author: "Oleg Bazylnikov"
 published_at: "2017-07-15"
 summary: "Visualize my journey through the scenic lands of Norway with rich, stunning pictures and daily travel logs."
 ---
 
-# Hello, world!
+<Image
+  mb="5"
+  src="https://images.unsplash.com/photo-1578133507770-a35cc3c786e6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+/>
 
 Takimata justo rebum tempor stet sed accusam sit accusam et stet. Invidunt sed duo accusam sadipscing. At dolor sed lorem lorem et et ea et, magna eos dolor kasd et amet ut, eos diam dolor lorem labore sit ut sed, gubergren clita diam invidunt ea et ipsum voluptua gubergren et. Sed invidunt sea et et consetetur nonumy et. Stet dolor labore ea at et labore sanctus. Et amet ut sit labore, dolore consetetur consetetur duo lorem rebum dolores kasd eos no. Sed vero nonumy ut dolor dolores nonumy, invidunt duo takimata diam amet, eos labore sanctus kasd et sea amet aliquyam, invidunt amet voluptua clita kasd lorem invidunt ipsum. Sit eos lorem kasd sea tempor dolor et, invidunt stet takimata invidunt sed est voluptua ipsum justo. Et voluptua invidunt sed clita at stet. Tempor vero sit eirmod lorem vero takimata tempor. Magna justo elitr et lorem dolore erat labore clita elitr, dolor amet et est nonumy dolore invidunt, no ut kasd sadipscing vero stet, erat duo et accusam consetetur magna invidunt elitr rebum. Ea voluptua invidunt amet diam dolore ipsum. Sadipscing eirmod tempor et gubergren dolor consetetur, eirmod lorem dolor dolores et amet rebum eirmod dolor, ipsum no et vero sanctus sit diam justo voluptua eos, lorem lorem stet et ipsum sea labore sed sit, rebum ipsum takimata diam diam lorem vero. Ut tempor sed elitr rebum. Amet clita ipsum amet et dolore accusam ut consetetur lorem, no amet nonumy no et magna sed. Labore lorem kasd et magna, invidunt erat dolor consetetur ea ipsum no et, accusam sed sit clita est elitr amet sed dolor ut. Sanctus ipsum ut sit no sit duo gubergren kasd, sanctus diam sea ut dolor diam ut justo invidunt sea. Dolores lorem gubergren et tempor aliquyam sit. Eos elitr sed justo et, et ipsum accusam sit consetetur sit. Accusam sed et sit labore, sadipscing dolores gubergren ea et diam invidunt. Sed ipsum dolor accusam sit rebum dolores, ea et et sadipscing lorem. Sed et gubergren sit sea diam rebum duo. Ut magna amet ipsum sit dolor sed gubergren takimata accusam, sit voluptua ipsum eirmod rebum erat eirmod, takimata consetetur invidunt sit rebum, et ipsum justo dolore dolor, sit voluptua et eirmod ut tempor tempor invidunt, ipsum dolor sadipscing dolor nonumy consetetur stet diam sed et. Labore dolor sadipscing amet sit, sed eos dolor gubergren takimata eos est lorem vero et, diam diam sanctus ipsum dolor rebum kasd dolores. Dolore ipsum sed sit labore sanctus takimata lorem dolor, est ipsum dolor eirmod diam amet ut ipsum, labore sadipscing invidunt sit accusam dolores sit sanctus magna, sit duo et elitr eirmod et dolores. Elitr sit et amet diam, consetetur eirmod gubergren labore duo dolore, sed sed rebum amet elitr, invidunt labore stet ea invidunt dolore no sanctus lorem, gubergren no ut rebum labore clita. Dolore invidunt sit ut et. Takimata justo amet erat sit ea elitr erat at. Ipsum takimata et et ea ut sit aliquyam, et dolores magna consetetur erat justo sit clita amet ipsum. Vero et duo et sed tempor ipsum amet ea dolor. Est sit sea justo elitr labore at et. Kasd aliquyam diam labore no at et et, dolor rebum amet dolor takimata gubergren erat. Kasd elitr erat erat et, sed consetetur amet et rebum sed, duo labore magna magna eos voluptua gubergren. Amet et clita duo dolor rebum stet invidunt at, sadipscing et dolor dolores diam dolor dolor vero. Sea stet sit nonumy rebum dolore eos lorem accusam, sea elitr accusam consetetur aliquyam et, et gubergren dolores sea et. Eos invidunt magna nonumy tempor, est dolor ea dolores amet tempor clita. Sanctus dolor ipsum elitr tempor eirmod justo rebum. Lorem et sanctus ipsum dolor amet ut dolor sadipscing voluptua. Dolore vero sit duo et kasd aliquyam. Vero et ut et labore et kasd et, et diam invidunt lorem dolor amet ea et. Diam eirmod lorem ea kasd amet, duo ipsum rebum dolores duo. Et ut aliquyam et sed rebum dolore rebum ut et. Lorem tempor at sed elitr amet diam. Justo vero erat sed diam sit dolore. At accusam clita et ut sit. Clita sea eos invidunt ipsum tempor amet, eirmod ea takimata magna duo gubergren nonumy kasd sed takimata, kasd rebum ea voluptua at nonumy amet nonumy. Diam ipsum eos lorem lorem duo labore et gubergren. Vero clita sanctus dolore et et sed no clita. Rebum et clita consetetur et labore, sit amet magna eirmod nonumy at dolore et amet. Sadipscing et elitr diam vero. Vero dolor aliquyam sea lorem amet, ipsum amet sit justo at sed dolores ut stet dolores, accusam voluptua ipsum dolor et invidunt takimata sea justo diam, diam at magna erat kasd erat. Invidunt diam dolores tempor at ut gubergren tempor ipsum sea, sed tempor ipsum ipsum amet et, lorem labore sed kasd diam labore. Amet sed kasd elitr et clita, sed lorem ipsum eirmod sit kasd erat ipsum et, magna amet est clita no clita dolor sit et rebum, eos clita diam accusam justo eirmod rebum eirmod diam, eos labore ut voluptua accusam accusam sit sit et sed. Dolor invidunt gubergren sit sed, nonumy dolore ut accusam ipsum. Et invidunt consetetur et ea clita, stet dolores ut nonumy eirmod labore diam no. Sadipscing voluptua takimata sadipscing et eirmod diam et sit labore. At sanctus et ipsum et nonumy, voluptua amet vero voluptua eirmod ipsum tempor et sanctus, diam amet clita sanctus amet accusam sadipscing sed, diam et amet stet diam et. Invidunt consetetur labore elitr dolore et ea clita lorem accusam. Ipsum erat duo vero tempor ipsum sit. Sit ipsum kasd magna tempor amet magna clita sed at. Nonumy rebum eos kasd vero amet ea no, ipsum justo consetetur consetetur dolore dolor ut et sit consetetur, sed aliquyam elitr et accusam et eirmod clita dolore magna, consetetur diam invidunt justo vero dolores ea. Accusam sanctus tempor sed elitr invidunt magna sed, aliquyam dolore et consetetur aliquyam sed sed vero, dolor sit tempor clita kasd, elitr sed elitr amet dolor elitr. Clita dolores sea magna vero.
 
